# EasyInfer

./: .flake8  .gitignore  AGENT_DEPLOYMENT.md  CLAUDE.md  DEPLOYMENT_SUMMARY.md  Prompt.md  README.md  pyproject.toml  run.sh  set_env.sh  vllm-prompt.md
.agents/skills/EasyInfer/: SKILL.md
.claude/: .mcp.json  ecc-tools.json  identity.json  settings.json  settings_bak.json
.claude/hooks/: block-dangerous.sh  session-init.sh  shellcheck-hook.sh
.claude/skills/: deploy-npu-model.md  diagnose-npu-errors.md
.codex/: AGENTS.md
docker/: set_env.sh  source_env_in_containers.sh
docs/: AGENT_DEPLOYMENT.md  claude-code-vllm-setup.md  deployment_summary.md  eco_tech_vllm_validation.md  kimi_k2_mcore_adaptation.md  lm_eval_local_dataset.md  lm_eval_usage.md  longcat_deploy_issues.md  longcat_eval.md  ms_download_usage.md  plugin_system_design.md  reverse_proxy_setup.md  scripts-overview.md  sglang_bug_report.md  symmetric-run.md
docs/superpowers/plans/: 2026-05-25-easyinfer-optimization.md
docs/superpowers/specs/: 2026-05-25-easyinfer-optimization-design.md
easyinfer/: __init__.py
easyinfer/cli/: __init__.py  __main__.py
easyinfer/plugins/: __init__.py  logging.py  registry.py
easyinfer/plugins/transformers/: __init__.py  configuration_longcat_flash.py  longcat_flash.py  modeling_longcat_flash_group.py
easyinfer/plugins/vllm/: __init__.py
easyinfer/plugins/vllm_ascend/: __init__.py  fix_dual_attention.py  fix_mla_rotary.py
easyinfer/scripts/: symmetric_run.py
examples/: GLM5_README.md  README.md  _common.sh  bench_gsm8k.sh  check_glm5_env.sh  curl_helper.py  curl_test.sh  deploy_all_models.sh  glm5-1_quant_server.sh  glm5-1_server.sh  glm5_full_server.sh  glm5_server.sh  kimi2_pcl.sh  lm_eval.sh  longcat_flash-chat.sh  qwen3_server.sh  run.sh
examples/deepseek-v4-flash_w8a8/sglang/: README.md  run_sglang.sh
examples/deepseek-v4-flash_w8a8/vllm/: README.md
examples/deepseek-v4-pro_w4a8/vllm/: README.md
examples/deepseek_v4_flash/: README.md  run_vllm.sh  vllm_server.sh
examples/deepseek_v4_flash/sglang/: README.md  curl_test.sh  run_sglang.sh  sglang_server.sh
examples/deepseek_v4_flash/vllm/: README.md  curl_test.sh  run_vllm.sh
examples/deepseek_v4_pro/vllm/: README.md  curl_test.sh  run_vllm.sh  run_vllm_dp.sh  vllm_server.sh
examples/glm-5.1_w4a8/vllm/: README.md
examples/glm-5.1_w8a8/vllm/: README.md  curl_test.sh  run_vllm.sh
examples/glm-5.2_w4a8c8/vllm/: README.md
examples/glm-5.2_w8a8/vllm/: README.md  run_vllm.sh
examples/glm-5/vllm/: README.md  run_vllm.sh
examples/glm-5_w4a8/sglang/: run_sglang.sh
examples/glm-5_w4a8/vllm/: README.md
examples/glm-5_w8a8/vllm/: README.md  run_vllm.sh
examples/glm5/: GLM5_README.md  _common.sh  check_glm5_env.sh  glm5-1_quant_server.sh  glm5_server.sh
examples/glm5/vllm/: README.md  curl_test.sh  (+2 more)
examples/glm5_1_w4a8/: README.md  run_vllm.sh  run_vllm_nomtp.sh  vllm_server.sh
examples/glm5_w4a8/: README.md  run_vllm.sh  vllm_server.sh
examples/kimi_k2_6_w4a8/: README.md  curl_test.sh  run_vllm.sh  vllm_server.sh
examples/longcat/: lm_eval.sh  lm_eval_math.sh  longcat-think.md  longcat_flash-chat.sh  longcat_flash_lite_depth18_docker.sh
examples/pcl-model-1t/: kimi2_pcl.sh
examples/prefill_decode_separation_deploy/: load_balance_proxy.sh  load_balance_proxy_server_example.py  remote_deploy.conf  remote_launch_deploy_pd_seg.py  remote_launch_deploy_pd_seg.sh  startup_events.conf  test_functional.py  test_performance.py
examples/qwen3/: qwen3_server.sh
longcat-flash/: configuration_longcat_flash.py  longcat_flash_implementation.md  zero_expert_deployment.md
prompts/: example-readme-template.md  example-scripts-template.md  longca_model.md  longcat_model.md  longcat_model_server.md  sglang-prompt.md  vllm-prompt.md  vllm_env_vars.md
scripts/: common.sh  node_list.txt  parallel_eco_tech_deploy.sh  parallel_eco_tech_deploy_remaining.sh
scripts/cluster/: kill_multi_nodes.sh  ray_head.sh  ray_node.sh  set_ray_env.sh  start_ray_cluster.sh  start_ray_cluster.sh.bak  stop_ray_cluster.sh
scripts/deploy/: manage_nodes.sh
scripts/docker/: README.md  ascend_infer_docker_run.sh  ascend_train_docker_run.sh  copy_file_to_containers.sh  docker_env.sh  manage_docker_containers.sh  manage_npuslim_containers.sh  prepare_docker_nodes.sh  run_npuslim_container.sh  save_docker_image.sh  set_env.sh  source_env_in_containers.sh
scripts/ray_cluster/: README.md  _kill_lib.sh  kill_multi_nodes.sh  manage_npuslim_ray_cluster.sh  manage_ray_cluster.sh  native_ray_start_cluster.sh  ray_head.sh  ray_node.sh  set_ray_env.sh  start_npuslim_ray_cluster copy.sh  start_npuslim_ray_cluster.sh  start_ray_cluster.sh  stop_ray_cluster.sh
scripts/vllm/: README.md  set_env.sh  set_vllm_env.sh  vllm_model_server.sh  vllm_server_env_template.sh
tools/: chat.py  check_weights.py  docker_proxy.sh  extract_longcat_2layer.py  hf_downlaod.sh  hf_download.sh  host_proxy.sh  link_claude_config.sh  ms_downlaod.sh  ms_download.py  ms_download.sh
tools/eval/: run_lmeval.sh  run_npu_lmeval.sh
tools/utils/: common.sh
vllm/mp/: deploy_vllm_multinode.sh  deploy_vllm_multinode_mp.sh
vllm/ray/: set_env.sh  stop_ray_cluster.sh
vllm/test/: vllm_test.sh
(+172 files in other folders)
