[project]
name = "EasyInfer"
version = "0.1.0"
description = "Ascend NPU 集群上的大模型推理部署工具集"
requires-python = ">=3.10"
dependencies = [
    "rich",
    "loguru",
    "datasets",
    "accelerate",
    "transformers<5.0.0",
]

[project.optional-dependencies]
eval = [
    "lm-eval[api]",
    "evalscope[perf]",
]
vllm = [
    "vllm",
]
npu = [
    "vllm-ascend",
]
all = [
    "lm-eval[api]",
    "evalscope[perf]",
    "vllm",
    "vllm-ascend",
]

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = [
    ".git",
    "__pycache__",
    ".mypy_cache",
    ".ruff_cache",
    "*.ipynb",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint]
select = [
    "F",     # Pyflakes
    "E",     # Pycodestyle errors
    "W",     # Pycodestyle warnings
    "I",     # Isort
    "B",     # Flake8-bugbear
    "C4",    # Flake8-comprehensions
    "SIM",   # Flake8-simplify
    "UP",    # Pyupgrade
    "RUF",   # Ruff-specific rules
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--tb=short", "--strict-markers"]
